fix right side stats not showing on iOS

--- a/src/ProfileCard.css
+++ b/src/ProfileCard.css
@@ -80,6 +80,7 @@
 
 .statsRight {
   padding: 0 10px;
+  height: 38px;
 }
 
 .statsText {
